--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,10 @@
     color: #fd0910;
 }
 
+.errorTitle span{
+    color:#32e232;
+}
+
 .titleAvatar{
     font-size: 1.6rem;
 }
@@ -197,6 +201,153 @@
 
 .avatarChoosen{
     border: 3px solid red;
+}
+
+/* Parte tabuleiro (perguntas, avatares etc)*/
+
+.boxPlayerPlay {
+    width: 3.5rem;
+    height: 3.5rem;
+    background-color: #252525;
+    padding: .75rem 1.25rem;
+    display: flex;
+    align-items: center;
+    background-size: cover !important;
+}
+
+.boxPlayerTopLeft, 
+.boxPlayerTopRight,
+.boxPlayerBottomLeft,
+.boxPlayerBottomRight {
+    position: absolute;
+    display: inline-block;
+}
+
+/* Top */
+.boxPlayerTopLeft, .boxPlayerBottomLeft {
+    left: 0;
+    border-bottom-right-radius: .5rem;
+}
+
+.boxPlayerTopRight, .boxPlayerBottomRight {
+    right: 0;
+    border-bottom-left-radius: .5rem;
+}
+
+/* Bottom */
+.boxPlayerBottomLeft {
+    bottom: 0;
+    border-radius: 0;
+    border-top-right-radius: .5rem;
+}
+
+.boxPlayerBottomRight {
+    bottom: 0;
+    border-radius: 0;
+    border-top-left-radius: .5rem;
+}
+
+
+.nameBottomUser{
+    margin-top: -.75rem;
+    text-transform: capitalize;
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 1.2rem;
+}
+
+.levelBox{
+    background-color: #F6f6f6;
+    border-radius: .5rem;
+    padding: 4rem;
+    position: absolute;
+    top: 25%;
+    display: flex;
+    flex-direction: column;
+    left: 35%;
+    align-items: center;
+}
+
+.level0, .level1, .level2,
+.levelButton0, .levelButton1{
+    padding: .5rem 2rem;
+    color: #F6f6f6;
+    font-weight: 600;
+    border-radius: .5rem;
+    cursor: pointer;
+    background-color: #252525;
+    transition: 250ms;
+    font-size: 1.45rem;
+}
+
+.level1, .level2,
+.levelButton1{
+    margin-top: 3rem;
+}
+
+.level0:hover,
+.level1:hover,
+.level2:hover,
+.levelButton0:hover, .levelButton1:hover{
+    background-color: #313131;
+}
+
+.levelButton0, .levelButton1{
+    padding: .5rem 1rem;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+}
+
+.boxPerguntas{
+    display: flex;
+    margin-top: 1.5rem;
+}
+
+.numberPergunta{
+    margin-right: .5rem;
+    font-size: 1.6rem;
+    margin-top: -1rem;
+}
+
+.perguntaText{
+    font-size: 1.2rem;
+    text-align: justify;
+}
+
+.inputResposta, .inputResposta:focus{
+    width: 100%;
+    border: 2px solid #252525;
+    border-radius: .5rem;
+    outline: none;
+    margin: 1rem auto;
+    padding: .3rem;
+}
+
+.buttonConfirmar, .buttonPular{
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    background-color: #148d14;
+    color: #f6f6f6;
+    transition: 250ms;
+    border-radius: .5rem;
+    cursor: pointer;
+    letter-spacing: .05rem;
+}
+
+.buttonPular{
+    margin-top: 1rem;
+    background-color: #b3b003;
+}
+
+.buttonConfirmar:hover{
+    background-color: #0f580f;
+}
+
+.buttonPular:hover{
+    background-color: #949100;
 }
 
 @keyframes imageUp {
