--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,8 @@
     text-align: center;
     margin-top: 1rem;
     margin-bottom: .5rem;
+    font-size: 1.2rem;
+    letter-spacing: .05rem;
     color: #fd0910;
 }
 
@@ -247,6 +249,21 @@
     border-top-left-radius: .5rem;
 }
 
+.marginTop, .marginBottom{
+    margin-top: 3.5rem;
+    font-size: .9rem;
+    margin-left: -.5rem;
+    width: 4rem;
+    text-align: center;
+}
+
+.marginBottom{
+    position: absolute;
+    bottom: 5.3rem;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 
 .nameBottomUser{
     margin-top: -.75rem;
@@ -256,15 +273,18 @@
     font-size: 1.2rem;
 }
 
-.levelBox{
+.levelBox {
     background-color: #F6f6f6;
     border-radius: .5rem;
-    padding: 4rem;
+    padding: 3.5rem;
     position: absolute;
-    top: 25%;
+    top: 50%; /* Centraliza verticalmente */
+    left: 50%; /* Centraliza horizontalmente */
+    transform: translate(-50%, -50%); /* Move a div para o centro corretamente */
     display: flex;
     flex-direction: column;
-    left: 35%;
+    width: 75%;
+    max-width: 40rem;
     align-items: center;
 }
 
@@ -302,6 +322,9 @@
 .boxPerguntas{
     display: flex;
     margin-top: 1.5rem;
+    margin-left: -1rem;
+    margin-right: -1rem;
+    margin-bottom: .5rem;
 }
 
 .numberPergunta{
@@ -321,6 +344,8 @@
     border-radius: .5rem;
     outline: none;
     margin: 1rem auto;
+    font-size: 1rem;
+    font-weight: 500;
     padding: .3rem;
 }
 
@@ -348,6 +373,33 @@
 
 .buttonPular:hover{
     background-color: #949100;
+}
+
+.buttonPular:disabled, .buttonConfirmar:disabled{
+    opacity: 75%;
+}
+
+.errorMessageSpace{
+    margin-top: 1.5rem;
+    margin-bottom: -1rem;
+}
+
+.titleSucess{
+    letter-spacing: .035rem;
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.text1{
+    margin-bottom: .5rem;
+    font-size: 1.4rem;
+}
+
+.text2{
+    font-size: 1rem;
 }
 
 @keyframes imageUp {
