--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@
 
 .imageAvatar{
     width: 5rem;
+    background-color:#25252575;
     margin: .5rem 0;
     border-radius: .5rem;
     cursor: pointer;
