--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@
 .boxPlayerPlay {
     width: 3.5rem;
     height: 3.5rem;
-    background-color: #252525;
+    background-color: #25252580;
     padding: .75rem 1.25rem;
     display: flex;
     align-items: center;
