--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+button, button:focus{
+    border:none;
+    outline:none;
+}
+
 .container{
     background-color: red;
     width: 100%;
