--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ button, button:focus{
     text-transform: capitalize;
     text-align: center;
     color: #f5f5f5;
-    font-size: 1.2rem;
+    font-size: .8rem;
 }
 
 .nameTopUser{
