--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,7 +528,7 @@ body, .container{
     }
 
     .marginTopLevel{
-        margin-top:55%;
+        margin-top:55% !important;
     }
 
     .levelBox{
