--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ body, .container{
     display: flex;
     align-items: center;
     margin-top: .3rem;
+    justify-content:center;
     border: none;
     box-shadow: none;
     padding: .5rem 1rem;
