--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ body, .container{
     display: flex;
     align-items: center;
     margin-top: .3rem;
+    c
     justify-content:center;
     border: none;
     box-shadow: none;
@@ -114,6 +115,10 @@ body, .container{
 
 .boxPlayer{
     margin-top: 1rem;
+}
+
+.playerId{
+    text-transform:capitalize;
 }
 
 .playerTitle{
